# social-media-generator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/api/: main.py
backend/api/routes/: analytics_routes.py  post_routes.py
backend/api/utils/: social_apis.py
backend/ml/: inference.py
tests/integration/: test_api.py
tests/unit/: test_inference.py
